# Rust-Backend-Starter-Axum-Tokio

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: rust.yml
config/: production.toml
src/: app_state.rs  config.rs  error.rs  main.rs  telemetry.rs
src/api/: health_check.rs  mod.rs
src/api/v1/: mod.rs  user_handler.rs
src/database/: mod.rs  mongo_db.rs  my_sql.rs
src/messaging/: kafka.rs  mod.rs  rabbit_mq.rs
src/models/: user.rs
src/services/: mod.rs
tests/: health_check.rs
