[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid", "macros"] }
mongodb = "2"
redis = { version = "0.24", features = ["tokio-comp"] }
lapin = "2"
rdkafka = { version = "0.36", features = ["tokio", "cmake-build"] }
config = "0.14"
dotenvy = "0.15"
secrecy = { version = "0.8", features = ["serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
validator = { version = "0.18", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }


